--- a/mcmc/forecast_so_class.yaml
+++ b/mcmc/forecast_so_class.yaml
@@ -1,15 +1,5 @@
 params:
 #COSMO PARAMETERS
-  theta_s_1e2:
-    prior:
-      min: 1.03
-      max: 1.05
-    proposal: 1.5e-4
-    latex: \theta_\mathrm{MC}
-
-  100*theta_s:
-    value: 'lambda theta_s_1e2: theta_s_1e2'
-    derived: false
 
   logA:
     prior:
@@ -23,15 +13,27 @@ params:
     value: 'lambda logA: 1e-10*np.exp(logA)'
     latex: A_\mathrm{s}
 
-  H0:
-    latex: H_0
-
   n_s:
     prior:
       min: 0.9
       max: 1.1
     proposal: 0.0033
     latex: n_\mathrm{s}
+
+  theta_s_1e2:
+    prior:
+      min: 1.03
+      max: 1.05
+    proposal: 1.5e-4
+    latex: \theta_\mathrm{MC}
+    drop: true
+
+  100*theta_s:
+    value: 'lambda theta_s_1e2: theta_s_1e2'
+    derived: false
+
+  H0:
+    latex: H_0
 
   omega_b:
     prior:
@@ -129,6 +131,7 @@ likelihood:
 
 theory:
   classy:
+    stop_at_error: True
     extra_args:
       N_ur: 2.0328
       N_ncdm: 1
