--- a/mcmc/forecast_so.yaml
+++ b/mcmc/forecast_so.yaml
@@ -50,6 +50,9 @@ params:
       scale: 0.0073
     proposal: 0.0073
     latex: \tau_\mathrm{reio}
+  mnu: 0.06
+  omk: 0
+  
 #FOREGROUNDS PARAMETERS
   a_tSZ: 3.3
     #prior:
@@ -124,9 +127,17 @@ theory:
     stop_at_error: False
     extra_args:
       lens_potential_accuracy: 1
-
+      halofit_version: mead
+      bbn_predictor: PArthENoPE_880.2_standard.dat
+      max_l: 9000
+      AccuracyBoost: 1
+      lAccuracyBoost: 1
+      lSampleBoost: 1
+      DoLateRadTruncation: False
+      standard_neutrino_neff: 3.046
+      num_massive_neutrinos: 1
 sampler:
   mcmc:
 
 modules: ''
-output: '/sps/planck/Users/tlouis/development/test_adrien/scripts/chains/so_forecast'
+output: ''
