--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ target/
 
 #code
 #*.p
+.python-version
 /true_fisher_forecast/pre_calc/
 /true_fisher_forecast/recover_covar_test/
 /mcmc/outputs/
